Updated README, github workflows, swagger. Added SecurityController for demonstrating JWKS.
